fixed letter spacing

--- a/src/components/NavigationPanel/NavigationPanel.module.css
+++ b/src/components/NavigationPanel/NavigationPanel.module.css
@@ -48,7 +48,7 @@
   font-family: var(--font-poppins);
   font-weight: 600;
   line-height: 21.04px;
-  letter-spacing: 1.26px;
+  letter-spacing: 1.15px;
   word-wrap: break-word;
   padding-bottom: 3%;
 }
@@ -59,7 +59,7 @@
   font-family: var(--font-poppins);
   font-weight: 600;
   line-height: 19px;
-  letter-spacing: 1.8px;
+  letter-spacing: 1px;
   word-wrap: break-word;
   margin-bottom: -50px;
 }
@@ -70,7 +70,7 @@
   font-family: var(--font-poppins);
   font-weight: 600;
   line-height: 19px;
-  letter-spacing: 1.8px;
+  letter-spacing: 1px;
   word-wrap: break-word;
   margin-bottom: 2.8px;
 }
@@ -82,7 +82,7 @@
   font-weight: 600;
   line-height: normal;
   line-height: 19px;
-  letter-spacing: 1.8px;
+  letter-spacing: 1px;
   word-wrap: break-word;
 }
 
